Import of MSTEVENS/Email-ARF-Hotmail-0.05 from CPAN.
gitpan-cpan-distribution: Email-ARF-Hotmail
gitpan-cpan-version:      0.05
gitpan-cpan-path:         MSTEVENS/Email-ARF-Hotmail-0.05.tar.gz
gitpan-cpan-author:       MSTEVENS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Email::ARF::Hotmail.
 
+0.05-alpha Mon Apr 19 18:43 2010
+    - Added parsing changes based on headers from Mark Zealey
+    - Added Regexp::Common dependency
+
 0.03 Thu Mar 25 11:06 2010
 	- Lower perl version requirement, after it was pointed out it probably does work
 		pre 5.8.9.
