--- a/README
+++ b/README
@@ -21,6 +21,7 @@ This module requires these other modules and libraries:
 
 	Email::ARF version 0.005
 	Email::MIME
+	Regexp::Common
 
 COPYRIGHT AND LICENCE
 
