Import of MSTEVENS/Email-ARF-Hotmail-0.06 from CPAN.
gitpan-cpan-distribution: Email-ARF-Hotmail
gitpan-cpan-version:      0.06
gitpan-cpan-path:         MSTEVENS/Email-ARF-Hotmail-0.06.tar.gz
gitpan-cpan-author:       MSTEVENS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Email::ARF::Hotmail.
 
+0.05 Tue Apr 20 14:37 2010
+    - Got some cleaner headers from internal systems and added
+      better test cases based on them.
+
 0.05-alpha Mon Apr 19 18:43 2010
     - Added parsing changes based on headers from Mark Zealey
     - Added Regexp::Common dependency
