--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Email::ARF::Hotmail.
 
+0.07 Fri Jul 30 12:43 2010
+    - Add an example use case to improve kwalitee
+
 0.05 Tue Apr 20 14:37 2010
     - Got some cleaner headers from internal systems and added
       better test cases based on them.
