--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Email::ARF::Hotmail.
 
+0.08 Sat Feb 19 20:27 2011
+	- Fix podchecker warnings.
+
 0.07 Fri Jul 30 12:43 2010
     - Add an example use case to improve kwalitee
 
